# JurassicParkTrespasser

./: .gitignore  .gitmodules  README.md  gitsyncscript.sh
jp2_pc/: .cproject  .project  ADPCM.eel  AI.DSP  AI.vcxproj  AI.vcxproj.filters  Ai.mcp  Audio.dsp  Audio.mcp  Audio.vcxproj  Audio.vcxproj.filters  Bugs.dsp  Bugs.vcxproj  Bugs.vcxproj.filters  CMakeLists.txt  CacheList.txt  CollisionEditor.dsp  CollisionEditor.vcxproj  CollisionEditor.vcxproj.filters  DebugLog.txt  EntityDBase.dsp  EntityDBase.mcp  EntityDBase.vcxproj  EntityDBase.vcxproj.filters  Error.scn  File Test.dsp  File Test.vcxproj  File Test.vcxproj.filters  File.dsp  File.vcxproj  File.vcxproj.filters  GUIApp.BCE  GUIApp.dsp  GUIApp.mcp  GUIApp.plg  GUIApp.vcxproj  GUIApp.vcxproj.filters  Game.dsp  Game.mcp  Game.vcxproj  (+101 more)
jp2_pc/BinData/: Standard.bmf
jp2_pc/BinData/Test100x100/: HeightField400x400x8.raw  MaterialIndex400x400x8.raw  PineValley4M256x512.RAW  PineValley8M128x256.RAW  ShackSceneHeight.RAW  phytestheightmap.RAW
jp2_pc/BuildTools/: GRF_PRESS.AWK  Guiappfinal.bat  MYPRESS.AWK  TBUILD.BAT  buildcopy.bat  checkset.bat  copyscenes.bat  movescene.bat  vssver.scc
jp2_pc/BuildTools/configs/: config_k6.hpp  config_p5.hpp  config_p6.hpp
jp2_pc/Distribution/Binary/: OpenTrespasser.ini  README.txt
jp2_pc/Documents/: HardwareD3D.txt  How to build .doc  Level Memory Data.xls  MasterFileMerges.xls  MemoryDebugging.md  Readme.doc  Secrets.doc  TRIGGERS.doc  TextProperties.doc  vssver.scc
jp2_pc/Inc/DirectX/: d3dtypes.h
jp2_pc/Inc/STL/: algo.h  algobase.h  bool.h  bstring.h  bvector.h  defalloc.h  deque.h  function.h  heap.h  iterator.h  list.h  map.h  multimap.h  multiset.h  pair.h  projectn.h  read.me  readme.wri  set.h  stack.h  stlguide.rtf  tempbuf.h  tree.h  vector.h
jp2_pc/Inc/maxsdk/: 3DSERES.H  3DSEXP.H  3DSIMP.H  3DSIRES.H  3DSMXHLP.H  3dsshape.h  AIIMP.H  AIRES.H  BEZFONT.H  CLIENT.H  DAN.H  DON.H  DRIVER.H  EVROUTER.H  FILTERS.H  GCOMM.H  GUS.H  HSV.H  INTERPIK.H  IPARAMM.H  LINSHAPE.H  MATRIX33.H  MESHADJ.H  MODSTACK.H  Max.h  NOTETRCK.H  NOTIFY.H  PARTICLE.H  RESLIB.H  RESMGR.H  RESOURCE.H  ROLF.H  SIMPMOD.H  SIMPOBJ.H  SIMPSHP.H  SIMPSPL.H  TCP.H  TEMPLT.H  TEXUTIL.H  TOM.H  (+69 more)
jp2_pc/Inc/rsx/: aaudio.h  rsx.h
jp2_pc/MWBuild/: AMD.mcp  P5.mcp  vssver.scc
jp2_pc/Metrowerks Additions/: 3DX-mw.hpp  RMaterial.cpp  TempBuf.cpp  algo.h  bool.h  function.h  memory.h  multimap.h  multiset.h  mw-test.cpp  pair.h  pseclamp.inl  pseclamp3.inl  psepilogue.inl  psepilogue3.inl  pspclamp.inl  pspclamp3.inl  psprologue.inl  psprologue3.inl  trespass.pch  vssver.scc
jp2_pc/Metrowerks Additions/PCH files/: mw-k6-D.pch  mw-k6-F.pch  mw-k6-R.pch  mw-k6-T-D.pch  mw-k6-T-F.pch  mw-k6-T-R.pch  mw-k6-gui-D.pch  mw-k6-gui-F.pch  mw-k6-gui-R.pch  mw-p5-D.pch  mw-p5-F.pch  mw-p5-R.pch  mw-p5-T-D.pch  mw-p5-gui-D.pch  mw-p5-gui-R.pch  vssver.scc
jp2_pc/Source/Bugs/: BogusNestedType.cpp  BogusTemplateDefinition.cpp  BogusTemplateType.cpp  Complaints.cpp  DynamicCastConst.cpp  FriendOperator.cpp  FriendSpecialise.cpp  MissingDefault.cpp  NestedTypeScope.cpp  NoConvert.cpp  PartialSpecialise.cpp  RandomCrash.cpp  TemplateAmbiguity.cpp  TemplateDefaultError.cpp  TemplateDefaultRedef.cpp  TemplateDefaultValue.cpp  TemplateNested.cpp  WackyMessage.cpp
jp2_pc/Source/Examples/: Class.hpp  Examples.hpp  File.cpp  File.hpp  Function.hpp  Namespace.hpp  Section.hpp
jp2_pc/Source/GUIApp/: AI Dialogs2Dlg.cpp  AI Dialogs2Dlg.h  Background.cpp  Background.hpp  CameraProperties.cpp  CameraProperties.hpp  DialogAlphaColour.cpp  DialogAlphaColour.hpp  DialogBumpPack.cpp  DialogBumpPack.hpp  DialogCulling.cpp  DialogCulling.hpp  DialogDepthSort.cpp  DialogDepthSort.hpp  DialogDummy.cpp  DialogDummy.hpp  DialogFog.cpp  DialogFog.hpp  DialogGamma.cpp  DialogGamma.hpp  DialogGore.cpp  DialogGore.hpp  DialogGun.cpp  DialogGun.hpp  DialogMagnet.cpp  DialogMagnet.h  DialogMaterial.cpp  DialogMaterial.h  DialogMemLog.cpp  DialogMemLog.hpp  DialogMipmap.cpp  DialogMipmap.hpp  DialogObject.cpp  DialogObject.h  DialogOcclusion.cpp  DialogOcclusion.hpp  DialogPartition.cpp  DialogPartition.hpp  DialogPhysics.cpp  DialogPhysics.hpp  (+64 more)
jp2_pc/Source/GroffBuild/: Dialogs.cpp  GroffBuild.rc  Utils.cpp  dialogs.h  gbuilder.cpp  gbuilder.h  main.cpp  main.h  maindlg.cpp  precomp.h  reg.cpp  reg.h  resource.h  utils.h
jp2_pc/Source/InitGUIApp/: DDDevice.cpp  DDDevice.hpp  InitGUIApp.cpp  InitGUIApp.h  InitGUIApp.mak  InitGUIApp.rc  InitGUIAppDlg.cpp  InitGUIAppDlg.h  Resource.h  StdAfx.cpp  StdAfx.h
jp2_pc/Source/InitGUIApp2/: InitGUIApp2.aps  InitGUIApp2.clw  InitGUIApp2.cpp  InitGUIApp2.h  InitGUIApp2.mak  InitGUIApp2.mdp  InitGUIApp2.ncb  InitGUIApp2.rc  InitGUIApp2Dlg.cpp  InitGUIApp2Dlg.h  Resource.h  StdAfx.cpp
jp2_pc/Source/Shell/: AppEvent.cpp  AppEvent.hpp  AppShell.cpp  AppShell.hpp  ShellResource.h  WinEvent.hpp  WinRenderTools.cpp  WinRenderTools.hpp  WinShell.rc  resource.h  winshell.cpp  winshell.hpp
jp2_pc/Source/Test/: AudioTest.cpp  AudioTest.h  AudioTest.rc  AudioTestDoc.cpp  AudioTestDoc.h  AudioTestView.cpp  AudioTestView.h  ColourDrawTest.cpp  ColourDrawTest.hpp  ColourTest.cpp  ColourTest.hpp  DDTest.rc  FastBumpTest.cpp  FastBumpTest.hpp  FastBumpTestShell.cpp  FastBumpTestShell.hpp  MainFrm.cpp  MainFrm.h  PolyData.cpp  PolyData.hpp  PolyTest.cpp  PolyTest.hpp  StdAfx.cpp  StdAfx.h  Test3DObjs.cpp  Test3DObjs.hpp  TestBump.cpp  TestMath.cpp  TestMath.hpp  TestPipeLine.cpp  TestPipeLine.hpp  attribdlg.cpp  attribdlg.h  resource.h  resource_audio.h  scan.cpp  scan.hpp
jp2_pc/Source/Trespass/: Cdib.cpp  Cdib.h  DDDevice.cpp  DDDevice.hpp  Dialogs.cpp  Grab.cpp  Grab.hpp  aaaa.cpp  ctrls.cpp  ctrls.h  dialogs.h  dlgrender.cpp  dlgrender.h  gamewnd.cpp  gdidlgbase.cpp  gdidlgbase.h  gdidlgs.cpp  gdidlgs.h  keyremap.cpp  keyremap.h  main.cpp  main.h  mainwnd.cpp  precomp.h  rasterdc.cpp  rasterdc.hpp  resource.h  saveload.cpp  supportfn.cpp  token.cpp  (+16 more)
jp2_pc/Tools/: Anne001.cau  Anne002.cau  Anne004.cau  Anne005.cau  Anne006.cau  EffectsEditor.opt  Music.cau  SubtitleLog.txt
jp2_pc/cmake/: CMakeCommon.cmake
(+1290 files in other folders)
